--- a/src/index.html
+++ b/src/index.html
@@ -1,100 +1,145 @@
 <!doctype html>
-<html lang="rus" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
-      xmlns="http://www.w3.org/1999/html">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+          rel="stylesheet">
     <title>Апенько Дмитрий M330122</title>
 </head>
 <body>
-<header class="head" align="center" style="height:100px">
-    <h1 class="name">Апенько Дмитрий M33122</h1>
+<header class="head">
+    <div class="container">
+        <div class="cap">
+            <img class="photo" src="img/IMG_C6E8AE2A93F6-1.png" alt="photo">
+            <h1 class="name">Дмитрий aka CSS M33122</h1>
+            <nav class="topnav">
+                <a class="active" href="#information_ph">Галерея</a>
+                <a class="active" href="#information">Достижения</a>
+                <a class="active" href="#information2">Детально</a>
+                <a class="active" href="#information3">Тотем</a>
+                <a class="active" href="#information4">Код</a>
+                <a class="active" href="#information5">Цитата</a>
+            </nav>
+        </div>
+    </div>
 </header>
+<hr class="line">
 <main class="main">
-    <section class="information">
-
-        <div class="records">
-            <div class="recordslist">
-                <h2 class="head">Список моих достижений</h2>
-                <ul>
-                    <h3 class="success">Достижения:</h3>
-                    <ul>
-                        <li>Победитель школьной олимпиады "Русский медвежонок" в 8 классе</li>
-                        <li>Создал сайт для стендап-комика</li>
-                        <li>Третьего пока что не было</li>
-                    </ul>
-
-                </ul>
-                <aside class="correction">
-                    <small>(Основные достижения)</small>
-                </aside>
-
+    <div class="container">
+        <section id="information_ph">
+            <div class="fullinfo1">
+                <div class="head">
+                    <strong>Моя фотогалерея</strong>
+                </div>
+                <div class="basic_info1">
+                    <img src="img/IMG_5046.jpg" alt="Фотография 1">
+                    <img src="img/IMG_5046.jpg" alt="Фотография 2">
+                    <img src="img/IMG_5046.jpg" alt="Фотография 3">
+                </div>
             </div>
-            <br>
-            <div class="recordsinformation">
-                <strong class="head">Более детальная информация:</strong>
-                <dl class="list">
-                    <dt>Русский медвежонок:</dt>
-                    <dd>Зубами вырвал победу у филолога из 8 класса</dd>
-                    <br>
-                    <dt>Стендап-комик:</dt>
-                    <dd>Стендап комик попросил сверстать сайт, но на него никто не звходит - он ноунейм</dd>
-                    <br>
-                    <dt>Третий пункт:</dt>
-                    <dd>Заполню, когда будет чем</dd>
-                </dl>
-            </div>
-        </div>
-        <br>
-        <div class="animal">
-            <strong class="head">Тотемное животное:</strong>
-            <p>╲╲╲╲╲╭━━━━╮╱╱╱╱╱<br>
-                ╲╲╲╲╲┃┊◒◒┊┃╱╱╱╱╱<br>
-                ╭━━━━╯┊╰╯┊╰━━━━╮<br>
-                ┃╭╮╭╮╭╮╭╮╭╮╭╮╭╮┃<br>
-                ┃┃┃┃┃┃┃┃┃┃┃┃┃┃┃┃<br>
-                ╰╯╰╯╰╯╰╯╰╯╰╯╰╯╰╯<br>
-            </p>
-        </div>
-        <br>
-        <div class="code">
-            <strong class="head">Пример моего кода:</strong>
-            <p class="code">
-                <code>
-                    function checkParent (src, dest) {<Br>
-                    while (src != null) {<Br>
-                    if (src.tagName == dest) return src<Br>
-                    src = src.parentElement<Br>
-                    }<Br>
-                    return null<Br>
-                    }
-                </code>
-            </p>
-        </div>
-        <br>
-        <div class="phrase">
-            <div class="head">
-                <strong class="text">Любимая цитата:</strong>
-            </div>
-            <div class="phraseblock">
-                <blockquote>
-                    <p class="text">"Люблю русских людей — мужики суровые, а женщины очень красивые."</p>
-                </blockquote>
-            </div>
-        </div>
-        <br>
-    </section>
+        </section>
 
-    <section class="footer">
+        <section id="information">
+            <div class="fullinfo">
+                <div class="list">
+                    <h2 class="head">Список моих достижений</h2>
+                    <div class="basic_info">
+                        <h3 class="success">Достижения:</h3>
+                        <ul>
+                            <li>Победитель школьной олимпиады "Русский медвежонок" в 8 классе</li>
+                            <li>Создал сайт для стендап-комика</li>
+                            <li id="none">Третьего пока что не было</li>
+                        </ul>
+                        <aside class="correction">
+                            <small>(Основные достижения)</small>
+                        </aside>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="information2">
+            <div class="fullinfo">
+                <div class="head">
+                    <strong>Более детальная информация</strong>
+                </div>
+                <div class="basic_info">
+                    <dl class="list">
+                        <dt>Русский медвежонок:</dt>
+                        <dd>Зубами вырвал победу у филолога из 8 класса</dd>
+                        <dt>Стендап-комик:</dt>
+                        <dd>Стендап комик попросил сверстать сайт, но на него никто не звходит - он ноунейм</dd>
+                        <dt>Третий пункт:</dt>
+                        <dd>Заполню, когда будет чем</dd>
+                    </dl>
+                </div>
+            </div>
+        </section>
+        <section id="information3">
+            <div class="fullinfo">
+                <div class="head">
+                    <strong>Тотемное животное</strong>
+                </div>
+                <div class="basic_info">
+                <pre>
+╲╲╲╲╲╭━━━━╮╱╱╱╱╱
+╲╲╲╲╲┃┊◒◒┊┃╱╱╱╱╱
+╭━━━━╯┊╰╯┊╰━━━━╮
+┃╭╮╭╮╭╮╭╮╭╮╭╮╭╮┃
+┃┃┃┃┃┃┃┃┃┃┃┃┃┃┃┃
+╰╯╰╯╰╯╰╯╰╯╰╯╰╯╰╯
+                </pre>
+                </div>
+            </div>
 
-    </section>
+        </section>
+        <section id="information4">
+            <div class="fullinfo">
+                <div class="head">
+                    <strong>Пример моего кода</strong>
+                </div>
+                <div class="basic_info">
+                <pre class="list">
+                    <code>
+function checkParent (src, dest) {
+    while (src != null) {
+        if (src.tagName == dest) return src
+        src = src.parentElement
+        }
+    return null
+}
+                    </code>
+                </pre>
+                </div>
+            </div>
+        </section>
+        <section id="information5">
+            <div class="fullinfo">
+                <div class="head">
+                    <strong>Любимая цитата</strong>
+                </div>
+                <div class="basic_info">
+                    <blockquote>
+                        "Люблю русских людей — мужики суровые, а женщины очень красивые."
+                        <br><cite>Джейсон Стетхем</cite>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+    </div>
 </main>
-<hr>
+<hr class="line">
 <footer class="basement">
-
-    <i class="footertext">Сайт выполнен Апенько Д.С.</i>
+    <div class="container">
+        <div class="footerbox">
+            <i class="footertext">Сайт выполнен Апенько Д.С.</i>
+        </div>
+    </div>
 </footer>
 
 </body>
