--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
           rel="stylesheet">
     <title>Апенько Дмитрий M330122</title>
+    <script src="js/script.js"></script>
 </head>
 <body>
 <header class="head">
@@ -20,11 +21,11 @@
             <h1 class="name">Дмитрий aka CSS M33122</h1>
             <nav class="topnav">
                 <a class="active" href="#information_ph">Галерея</a>
-                <a class="active" href="#information">Достижения</a>
-                <a class="active" href="#information2">Детально</a>
-                <a class="active" href="#information3">Тотем</a>
-                <a class="active" href="#information4">Код</a>
-                <a class="active" href="#information5">Цитата</a>
+                <a class="" href="#information1">Достижения</a>
+                <a class="" href="#information2">Детально</a>
+                <a class="" href="index5.html">Тотем</a>
+                <a class="" href="index6.html">Код</a>
+                <a class="" href="index7.html">Цитата</a>
             </nav>
         </div>
     </div>
@@ -32,7 +33,7 @@
 <hr class="line">
 <main class="main">
     <div class="container">
-        <section id="information_ph">
+        <section id="information_ph" class="sectionn">
             <div class="fullinfo1">
                 <div class="head">
                     <strong>Моя фотогалерея</strong>
@@ -45,7 +46,7 @@
             </div>
         </section>
 
-        <section id="information">
+        <section id="information1" class="sectionn">
             <div class="fullinfo">
                 <div class="list">
                     <h2 class="head">Список моих достижений</h2>
@@ -63,7 +64,7 @@
                 </div>
             </div>
         </section>
-        <section id="information2">
+        <section id="information2" class="sectionn">
             <div class="fullinfo">
                 <div class="head">
                     <strong>Более детальная информация</strong>
@@ -80,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section id="information3">
+        <section id="information3" class="sectionn">
             <div class="fullinfo">
                 <div class="head">
                     <strong>Тотемное животное</strong>
@@ -98,7 +99,7 @@
             </div>
 
         </section>
-        <section id="information4">
+        <section id="information4" class="sectionn">
             <div class="fullinfo">
                 <div class="head">
                     <strong>Пример моего кода</strong>
@@ -118,7 +119,7 @@ function checkParent (src, dest) {
                 </div>
             </div>
         </section>
-        <section id="information5">
+        <section id="information5" class="sectionn">
             <div class="fullinfo">
                 <div class="head">
                     <strong>Любимая цитата</strong>
@@ -131,6 +132,36 @@ function checkParent (src, dest) {
                 </div>
             </div>
         </section>
+        <section class="table">
+            <div class="fullinfo">
+            <h2 class="head">Результаты нормативов за 3 курс</h2>
+            <hr class="table-line">
+            <div class="grid">
+                <div class="box">Нормативы</div>
+                <div class="box">Подтягивания</div>
+                <div class="box">Пресс</div>
+                <div class="box">Бег 100м.</div>
+                <div class="box">Апенько</div>
+                <div class="box">1000</div>
+                <div class="box">3000</div>
+                <div class="box">1 сек.</div>
+                <div class="box">Аликин</div>
+                <div class="box">15</div>
+                <div class="box">60</div>
+                <div class="box">10 сек.</div>
+                <div class="box">Чикалев</div>
+                <div class="box">14</div>
+                <div class="box">60</div>
+                <div class="box">10.5 сек.</div>
+                <div class="box">Траханов</div>
+                <div class="box">20</div>
+                <div class="box">45</div>
+                <div class="box">12 сек.</div>
+
+
+            </div>
+                </div>
+        </section>
     </div>
 </main>
 <hr class="line">
@@ -141,6 +172,5 @@ function checkParent (src, dest) {
         </div>
     </div>
 </footer>
-
 </body>
 </html>
