--- a/src/index3.html
+++ b/src/index3.html
@@ -33,21 +33,26 @@
 <hr class="line">
 <main class="main">
 <div class="container">
-    <section id="information_ph">
-        <div class="fullinfo1">
-            <div class="head">
-                <strong>Моя фотогалерея</strong>
-            </div>
-            <div class="basic_info1">
-                <img src="img/IMG_5046.jpg" alt="Фотография 1">
-                <img src="img/IMG_5046.jpg" alt="Фотография 2">
-                <img src="img/IMG_5046.jpg" alt="Фотография 3">
+    <section id="information1" class="sectionn">
+        <div class="fullinfo">
+            <div class="list">
+                <h2 class="head">Список моих достижений</h2>
+                <div class="basic_info">
+                    <h3 class="success">Достижения:</h3>
+                    <ul>
+                        <li>Победитель школьной олимпиады "Русский медвежонок" в 8 классе</li>
+                        <li>Создал сайт для стендап-комика</li>
+                        <li id="none">Третьего пока что не было</li>
+                    </ul>
+                    <aside class="correction">
+                        <small>(Основные достижения)</small>
+                    </aside>
+                </div>
             </div>
         </div>
     </section>
 </div>
 </main>
-<hr class="line">
 
 </body>
 </html>
