--- a/src/index4.html
+++ b/src/index4.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -12,6 +12,7 @@
           rel="stylesheet">
     <title>Апенько Дмитрий M330122</title>
     <script src="js/script2.js"></script>
+
 </head>
 <body>
 <header class="head">
@@ -33,21 +34,24 @@
 <hr class="line">
 <main class="main">
 <div class="container">
-    <section id="information_ph">
-        <div class="fullinfo1">
+    <section id="information2">
+        <div class="fullinfo">
             <div class="head">
-                <strong>Моя фотогалерея</strong>
+                <strong>Более детальная информация</strong>
             </div>
-            <div class="basic_info1">
-                <img src="img/IMG_5046.jpg" alt="Фотография 1">
-                <img src="img/IMG_5046.jpg" alt="Фотография 2">
-                <img src="img/IMG_5046.jpg" alt="Фотография 3">
+            <div class="basic_info">
+                <dl class="list">
+                    <dt>Русский медвежонок:</dt>
+                    <dd>Зубами вырвал победу у филолога из 8 класса</dd>
+                    <dt>Стендап-комик:</dt>
+                    <dd>Стендап комик попросил сверстать сайт, но на него никто не звходит - он ноунейм</dd>
+                    <dt>Третий пункт:</dt>
+                    <dd>Заполню, когда будет чем</dd>
+                </dl>
             </div>
         </div>
     </section>
 </div>
 </main>
-<hr class="line">
-
 </body>
 </html>
