--- a/src/index7.html
+++ b/src/index7.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -12,6 +12,7 @@
           rel="stylesheet">
     <title>Апенько Дмитрий M330122</title>
     <script src="js/script2.js"></script>
+
 </head>
 <body>
 <header class="head">
@@ -32,22 +33,21 @@
 </header>
 <hr class="line">
 <main class="main">
-<div class="container">
-    <section id="information_ph">
-        <div class="fullinfo1">
-            <div class="head">
-                <strong>Моя фотогалерея</strong>
+    <div class="container">
+        <section id="information5">
+            <div class="fullinfo">
+                <div class="head">
+                    <strong>Любимая цитата</strong>
+                </div>
+                <div class="basic_info">
+                    <blockquote>
+                        "Люблю русских людей — мужики суровые, а женщины очень красивые."
+                        <br><cite>Джейсон Стетхем</cite>
+                    </blockquote>
+                </div>
             </div>
-            <div class="basic_info1">
-                <img src="img/IMG_5046.jpg" alt="Фотография 1">
-                <img src="img/IMG_5046.jpg" alt="Фотография 2">
-                <img src="img/IMG_5046.jpg" alt="Фотография 3">
-            </div>
-        </div>
-    </section>
-</div>
+        </section>
+    </div>
 </main>
-<hr class="line">
-
 </body>
 </html>
