--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
             <img class="photo" src="img/IMG_C6E8AE2A93F6-1.png" alt="photo">
             <h1 class="name">Дмитрий aka CSS M33122</h1>
             <nav class="topnav">
-                <a class="active" href="#information_ph">Галерея</a>
-                <a class="" href="#information1">Достижения</a>
-                <a class="" href="#information2">Детально</a>
+                <a class="active" href="index2.html">Галерея</a>
+                <a class="" href="index3.html">Достижения</a>
+                <a class="" href="index4.html">Детально</a>
                 <a class="" href="index5.html">Тотем</a>
                 <a class="" href="index6.html">Код</a>
                 <a class="" href="index7.html">Цитата</a>
