--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <img class="photo" src="img/IMG_C6E8AE2A93F6-1.png" alt="photo">
             <h1 class="name">Дмитрий aka CSS M33122</h1>
             <nav class="topnav">
-                <a class="active" href="index2.html">Галерея</a>
+                <a class="" href="index2.html">Галерея</a>
                 <a class="" href="index3.html">Достижения</a>
                 <a class="" href="index4.html">Детально</a>
                 <a class="" href="index5.html">Тотем</a>
