--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@ function checkParent (src, dest) {
         <section class="table">
             <div class="fullinfo">
             <h2 class="head">Результаты нормативов за 3 курс</h2>
-            <hr class="table-line">
+            <hr class="liner">
             <div class="grid">
                 <div class="box">Нормативы</div>
                 <div class="box">Подтягивания</div>
