--- a/src/index3.html
+++ b/src/index3.html
@@ -1,17 +1,20 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style_lab6.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
           rel="stylesheet">
+    <script src="js/script.js"></script>
     <title>Апенько Дмитрий M330122</title>
-    <script src="js/script2.js"></script>
+    <title>Fetch</title>
 </head>
 <body>
 <header class="head">
@@ -20,39 +23,27 @@
             <img class="photo" src="img/IMG_C6E8AE2A93F6-1.png" alt="photo">
             <h1 class="name">Дмитрий aka CSS M33122</h1>
             <nav class="topnav">
-                <a class="" href="index2.html">Галерея</a>
-                <a class="" href="index3.html">Достижения</a>
-                <a class="" href="index4.html">Детально</a>
-                <a class="" href="index5.html">Тотем</a>
-                <a class="" href="index6.html">Код</a>
-                <a class="" href="index7.html">Цитата</a>
+                <a href="index.html" id="def">На главную</a>
             </nav>
         </div>
     </div>
 </header>
 <hr class="line">
-<main class="main">
+<main id="main">
 <div class="container">
-    <section id="information1" class="sectionn">
-        <div class="fullinfo">
-            <div class="list">
-                <h2 class="head">Список моих достижений</h2>
-                <div class="basic_info">
-                    <h3 class="success">Достижения:</h3>
-                    <ul>
-                        <li>Победитель школьной олимпиады "Русский медвежонок" в 8 классе</li>
-                        <li>Создал сайт для стендап-комика</li>
-                        <li id="none">Третьего пока что не было</li>
-                    </ul>
-                    <aside class="correction">
-                        <small>(Основные достижения)</small>
-                    </aside>
-                </div>
-            </div>
-        </div>
+    <section id="information6">
+    <div class="btnBox">
+        <button id="btn" type="button" class="button">
+            Загрузить
+        </button>
+    </div>
+    <!-- <div class="preloader">
+        Loading...
+      </div> -->
+    <div class="cardBox" id="CardDiv"></div>
     </section>
 </div>
+<script src="js/script_lab6.js"></script>
 </main>
-
 </body>
 </html>
