--- a/lab7/src/index3.html
+++ b/lab7/src/index3.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
           rel="stylesheet">
-    <script src="js/script.js"></script>
+<!--    <script src="js/script.js"></script>-->
     <title>Апенько Дмитрий M330122</title>
     <title>Fetch</title>
 </head>
